# my_drf_demo

./: .gitignore  AGENTS.md  pyrightconfig.json
.kiro/steering/: product.md
.trae/rules/: product.md  structure.md  tech.md
.trae/specs/add-auth-flow/: checklist.md  spec.md  tasks.md
backend/: README.md  db.sqlite3  main.py  manage.py  pyproject.toml
backend/accounts/: apps.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/course/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/course/migrations/: 0001_initial.py
backend/mydrfdemo/: asgi.py  settings.py  urls.py  wsgi.py
docs/: backend-course-views-line-by-line.md  backend-course-views-line-by-line疑问.md  backend-thinking-from-auth.md
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: style.css
frontend/src/router/: index.js
frontend/src/services/: auth.js
frontend/src/views/: HomeView.vue  LoginView.vue  RegisterView.vue
