[project]
name = "my-drf-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.2",
    "djangorestframework-stubs>=3.16.9",
    "ruff>=0.15.8",
]
